// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PublisherLabel with no prefLabel 1`] = `
<span>
  Eies av
   
  <span
    className="fdk-strong-virksomhet"
  >
    Ramsund og rognan revisjon
  </span>
</span>
`;

exports[`should render PublisherLabel with no props 1`] = `""`;

exports[`should render PublisherLabel with publisher 1`] = `
<span>
  Eies av
   
  <span
    className="fdk-strong-virksomhet"
  >
    Ramsund og Rognan revisjon
  </span>
</span>
`;
